Fixed portrait margin on mobile screens

--- a/assets/css/topbar.virtual.css
+++ b/assets/css/topbar.virtual.css
@@ -168,21 +168,22 @@
   background-color: #fff;
 }
 
-.page-about .img-place {
+.page-about .img-portrait {
+  margin-bottom: 50px;
   width: 280px;
   height: 350px;
   background-color: #dfe3e6;
   overflow: unset;
 }
 
-.page-about .img-place::before {
+.page-about .img-portrait::before {
   content: "";
   position: absolute;
   top: -20px;
   right: -35px;
   width: 100%;
   height: 100%;
-  border: 5px solid #747474;
+  border: 5px solid #0b8ed4;
   z-index: -1;
 }
 
@@ -247,6 +248,74 @@
 }
 
 .timeline li .details small {
+  display: block;
+  font-weight: 500;
+  font-size: 14px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.timeline-no-highlight {
+  position: relative;
+  display: block;
+  list-style: none;
+  padding-left: 0;
+  width: 100%;
+}
+
+.timeline-no-highlight::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+  width: 2px;
+  height: 95%;
+  background-color: #e3e5e9;
+}
+
+.timeline-no-highlight li {
+  position: relative;
+  display: block;
+  padding-left: 30px;
+  margin-bottom: 20px;
+}
+
+.timeline-no-highlight li::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: -8px;
+  width: 18px;
+  height: 18px;
+  background-color: #747474;
+  border: 3px solid #fff;
+  border-radius: 50%;
+}
+
+.timeline-no-highlight li .title {
+  width: 150px;
+  padding: 6px 20px;
+  background-color: #747474;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 30px 0 60px 30px;
+}
+
+.timeline-no-highlight li .details {
+  background-color: #f4f5f8;
+  margin-top: 8px;
+  padding: 20px;
+  border-radius: 4px;
+}
+
+.timeline-no-highlight li .details h5,
+.timeline-no-highlight li .details p {
+  margin-bottom: 0;
+}
+
+.timeline-no-highlight li .details small {
   display: block;
   font-weight: 500;
   font-size: 14px;
@@ -533,6 +602,17 @@
   background-color: #0b8ed4;
   box-shadow: 0 0 0 2px #0b8ed4;
 }
+
+.theme-blue .timeline-no-highlight li:first-child .title {
+  background-color: #747474;
+}
+
+.theme-blue .timeline-no-highlight li:first-child::before {
+  background-color: #747474;
+  box-shadow: 0 0 0 2px #747474;
+}
+
+
 
 .theme-blue .post-grid .post-category {
   color: #0b8ed4;
