--- a/assets/css/virtual.css
+++ b/assets/css/virtual.css
@@ -104,6 +104,20 @@ a:hover, a:active {
 }
 
 /* Image Responsive */
+
+.img-portrait {
+    position: relative;
+    display: block;
+    margin: 0 auto;
+    width: 100%;height: 100%;
+    overflow: hidden;
+    z-index: 10;
+}
+.img-portrait > img {
+    width: 100%;height: auto;
+}
+
+
 .img-place {
     position: relative;
     display: block;
@@ -1038,7 +1052,7 @@ a:hover, a:active {
 
 
 .theme-blue .fg-theme-no-contrast {
-    color: #2a77a1 !important;
+    color: #0b8ed4 !important;
 }
 
 
